# SentinelFin

./: .env.example  .gitignore  BUILD_LOG.md  CODING_AGENTS.md  JUDGES_EVALUATION_GUIDE.md  LICENSE  MAESTRO_DEPLOYMENT_GUIDE.md  README.md  UIPATH_INTEGRATION_GUIDE.md  agent3_failure_log.txt  app.py  fix_main.py  generate_demo_files.py  generate_massive_pdfs.py  main.py  metadata.xml  requirements.txt  start_demo.sh  test_auth.py  test_comment.py  test_create_form_task.py  test_form_odata.py  test_metadata.py  test_odata.py  test_quickform.py  test_swagger.py
agents/: main.py  mass_scaffold.py
agents/agent_1_triage_hitl/: agent.mermaid  entry-points.json  langgraph.json  main.mermaid  main.py  project.uiproj  pyproject.toml  uipath.json
agents/agent_1_triage_hitl/.uipath/: .telemetry.json  agent_1_triage.0.0.1.nupkg  agent_1_triage.0.0.2.nupkg  agent_1_triage_hitl.0.0.1.nupkg  agent_1_triage_hitl.0.0.3.nupkg
agents/agent_2_investigation_api/: agent_2_investigation_api.mermaid  entry-points.json  main.py  project.uiproj  pyproject.toml  uipath.json
agents/agent_2_investigation_api/.uipath/: .telemetry.json  agent_2_investigation_api.0.0.1.nupkg
agents/agent_2_sanctions_screener/: agent.py  entry-points.json  main.py  project.uiproj  pyproject.toml  uipath.json
agents/agent_2_sanctions_screener/.uipath/: .telemetry.json  agent_2_sanctions_screener.0.0.1.nupkg  agent_2_sanctions_screener.0.0.3.nupkg  agent_2_sanctions_screener.0.0.4.nupkg
agents/agent_5_regulatory_intelligence/: agent.py  entry-points.json  main.py  project.uiproj  pyproject.toml  uipath.json
agents/agent_5_regulatory_intelligence/.uipath/: .telemetry.json  agent_5_regulatory_intelligence.0.0.1.nupkg  agent_5_regulatory_intelligence.0.0.3.nupkg  agent_5_regulatory_intelligence.0.0.4.nupkg
agents/agent_6_sar_signature_hitl/: agent.mermaid  entry-points.json  main.py  project.uiproj  pyproject.toml  uipath.json
agents/agent_6_sar_signature_hitl/.uipath/: .telemetry.json  agent_6_sar_signature_hitl.0.0.1.nupkg  agent_6_sar_signature_hitl.0.0.2.nupkg  agent_6_sar_signature_hitl.0.0.3.nupkg  agent_6_sar_signature_hitl.0.0.4.nupkg  agent_6_sar_signature_hitl.0.0.5.nupkg  agent_6_sar_signature_hitl.0.0.6.nupkg
agents/agent_7_sar_form_population/: agent.py  entry-points.json  main.mermaid  main.py  project.uiproj  pyproject.toml  uipath.json
agents/agent_7_sar_form_population/.uipath/: .telemetry.json  agent_7_sar_form_population.0.0.1.nupkg  agent_7_sar_form_population.0.0.3.nupkg  agent_7_sar_form_population.0.0.4.nupkg
dashboard/: package-lock.json
docs/: DEVPOST_SUBMISSION.md  PRESENTATION_SCRIPT.md  PRODUCT_FEEDBACK.md  demo-script.md
generated_reports/: BSA-EFILE-090F274B.html  BSA-EFILE-157BD32E.html  BSA-EFILE-1A3B8675.html  BSA-EFILE-27E3603C.html  BSA-EFILE-28D85068.html  BSA-EFILE-2FCF8D28.html  BSA-EFILE-412C19DC.html  BSA-EFILE-47C1A8B7.html  BSA-EFILE-481F193A.html  BSA-EFILE-50F311BC.html  BSA-EFILE-54998A30.html  BSA-EFILE-6B20E444.html  BSA-EFILE-6C6C907E.html  BSA-EFILE-6F93F2EA.html  BSA-EFILE-6FD4860B.html  BSA-EFILE-75889869.html  BSA-EFILE-80BC4758.html  BSA-EFILE-8503F1FF.html  (+18 more)
(+68 files in other folders)
