[project]
name = "agent_5_regulatory_intelligence"
version = "0.0.1"
description = "agent_5_regulatory_intelligence"
authors = [{ name = "SentinelFin", email = "sentinelfin@example.com" }]
dependencies = [
    "uipath-core>=0.5.19",
    "uipath-langchain[bedrock,vertex]>=0.10.0,<0.11.0",
    "langchain>=0.2.0",
    "langgraph>=0.1.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.30.0",
    "boto3>=1.34.0"
]
requires-python = ">=3.11"
